--- a/src/index.pug
+++ b/src/index.pug
@@ -5,9 +5,10 @@ html(lang="ru")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title Parcel Jake Pug
+        title Competencies
 
         script(src='./styles.js', type='module')
         script(src='./scripts.js', type='module')
     body
-        h1 Hello Parcel!
+        header
+            include ./layout/header/header.pug
