--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,67 @@
+$primary-color: #196BB1;
+$primary-color-hover: #0175D8;
+$primary-color-active: #15568D;
+
+@mixin flexible {
+    display: flex;
+    align-items: center;
+}
+@mixin absoluteCenter {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+}
+
+@mixin h1 {
+    font-weight: 700;
+    font-size: 72px;
+    line-height: 83px;
+}
+@mixin h2-regular {
+    font-weight: 400;
+    font-size: 46px;
+    line-height: 53px;
+}
+@mixin h2-bold {
+    font-weight: 700;
+    font-size: 46px;
+    line-height: 53px;
+}
+@mixin h3-regular {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 28px;
+}
+@mixin h3-bold {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+}
+@mixin paragraph-regular {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+}
+@mixin paragraph-bold {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 21px;
+}
+
+* {
+    font-family: 'Helvetica', sans-serif;
+    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    outline: none;
+    border: none;
+}
+
 body {
     background-color: #f4f4f4;
 }
