added courses nav and anchor

--- a/src/index.pug
+++ b/src/index.pug
@@ -10,5 +10,7 @@ html(lang="ru")
         script(src='./styles.js', type='module')
         script(src='./scripts.js', type='module')
     body
-        header
+        header.header
             include ./layout/header/header.pug
+        main
+            include ./layout/courses/courses.pug
