--- a/src/layout/header/header.pug
+++ b/src/layout/header/header.pug
@@ -7,7 +7,7 @@ div.header__container
             | Корзина компетенций студента РТУ МИРЭА
         h2.header__subtitle
             | Институт информационных технологий
-        button.header__button
+        a(href="#CoursesTitle").header__button
             | Ознакомиться
 
 
