--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,7 @@
 $primary-color: #196BB1;
 $primary-color-hover: #0175D8;
 $primary-color-active: #15568D;
+$paragraph-black: #2c2c2c;
 
 @mixin flexible {
     display: flex;
