added courses data.json + added courses cards

--- a/src/index.pug
+++ b/src/index.pug
@@ -12,5 +12,6 @@ html(lang="ru")
     body
         header.header
             include ./layout/header/header.pug
+            include ./layout/main/main.pug
         main
             include ./layout/courses/courses.pug
