--- a/src/index.pug
+++ b/src/index.pug
@@ -15,3 +15,5 @@ html(lang="ru")
             include ./layout/main/main.pug
         main
             include ./layout/courses/courses.pug
+        footer
+            include ./layout/footer/footer.pug
