--- a/src/layout/header/header.pug
+++ b/src/layout/header/header.pug
@@ -1,2 +1,3 @@
 div.header__top
-    img(src='/assets/images/mirea-logo.svg' alt='MIREA-logo')
+    a(href='https://www.mirea.ru/', target="_blank")
+        img(src='/assets/images/mirea-logo.svg' alt='MIREA-logo')
