--- a/src/layout/header/header.pug
+++ b/src/layout/header/header.pug
@@ -1,3 +1,3 @@
 div.header__top
     a(href='https://www.mirea.ru/', target="_blank")
-        img(src='/assets/images/mirea-logo.svg' alt='MIREA-logo')
+        img(src='../src/assets/images/mirea-logo.svg' alt='MIREA-logo')
