--- a/src/layout/courses/courses.pug
+++ b/src/layout/courses/courses.pug
@@ -15,6 +15,6 @@ section.courses
                 label(for=`courses__nav__${obj}` onclick=`generateSections("${obj}")`)
                     =obj
     div.courses__search
-        input(placeholder='Поиск по направлениям')#SearchInput
+        input(placeholder='Поиск по направлениям и профилям обучения')#SearchInput
         div#SearchResult.courses__result
     section#CoursesParent.courses__parent
