--- a/src/layout/footer/footer.pug
+++ b/src/layout/footer/footer.pug
@@ -3,7 +3,7 @@ include ../../data/footerData.pug
 div.footer__container
     .footer__inner
         a(href='https://www.mirea.ru/', target="_blank")
-            img(src='./assets/images/mirea-logo.svg').footer__logo
+            img(src='/assets/images/mirea-logo.svg').footer__logo
         .footer__section
             .footer__title
                 | Статистика прошлых лет
@@ -20,6 +20,12 @@ div.footer__container
             .footer__title
                  | Чаты абитуриентов
             .footer__chats
-                each obj in data.chats
+                 each obj in data.chats
                     a(href=obj.link, target="_blank").footer__item
-                        img(src=obj.ico, alt=obj.title)
+                        case obj.title
+                            when 'VK'
+                                include ../../../assets/icons/VK.svg
+                            when 'Telegram'
+                                include ../../../assets/icons/telegram.svg
+                            default
+                                |
