--- a/src/layout/main/main.pug
+++ b/src/layout/main/main.pug
@@ -1,5 +1,5 @@
 div.header__container
-    img(src='../src/assets/images/background-IT-logo.svg' alt='IIT-logo').header__logo
+    img(src='/assets/images/background-IT-logo.svg' alt='IIT-logo').header__logo
     .header__information
         h1.header__title
             | Корзина компетенций студента РТУ МИРЭА
