--- a/src/layout/header/header.pug
+++ b/src/layout/header/header.pug
@@ -1,3 +1,8 @@
 div.header__top
-    a(href='https://www.mirea.ru/', target="_blank")
-        img(src='/assets/images/mirea-logo.svg' alt='MIREA-logo')
+    .header__inner
+        button(onclick=`history.back()`).header__back.header__hidden#HeaderBack
+            include ../../../assets/icons/header_arrow.svg
+        a(href='https://www.mirea.ru/', target="_blank").header__logo
+            img(src='/assets/images/mirea-logo.svg' alt='MIREA-logo')
+        a(href=`/compare`).header__compare#HeaderCompare
+            include ../../../assets/icons/header_compare.svg
