--- a/src/layout/main/main.scss
+++ b/src/layout/main/main.scss
@@ -4,7 +4,7 @@
     position: relative;
     background: linear-gradient(0deg, rgba(44, 44, 44, 0.7), rgba(44, 44, 44, 0.7)), url("/assets/images/background-A421.png") center no-repeat;
     background-size: cover;
-    height: 88vh;
+    height: 86vh;
     @include flexible();
     justify-content: center;
 
@@ -16,9 +16,10 @@
 
 
     & .header__information {
-          position: relative;
-          z-index: 2;
-          padding: 0 13vw;
+        position: relative;
+        z-index: 2;
+        width: 1170px;
+        margin: 0 auto;
 
         & .header__title {
               @include h1();
