added based subjects for bachelor courses

--- a/src/index.pug
+++ b/src/index.pug
@@ -5,6 +5,7 @@ html(lang="ru")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
+        meta(name="description" content='Корзина компетенций для приемной комиссии')
         title Competencies
 
         script(src='./styles.js', type='module')
