start course pattern template + added win 32 postbuild

--- a/src/layout/main/main.pug
+++ b/src/layout/main/main.pug
@@ -1,4 +1,4 @@
-div.header__container
+section.header__container
     img(src='/assets/images/background-IT-logo.svg' alt='IIT-logo').header__logo
     .header__information
         h1.header__title
