--- a/src/layout/courses/courses.scss
+++ b/src/layout/courses/courses.scss
@@ -1,13 +1,10 @@
 @import "./src/style.scss";
 
 .courses {
-    padding: 150px 0;
-    background:url("/assets/images/courses_background.svg") bottom no-repeat;
-    background-size: contain;
+    @include page-template();
 
     & .courses__title {
         @include h1();
-        text-align: center;
         color: $paragraph-black;
         margin-bottom: 25px;
     }
@@ -143,125 +140,5 @@
             }
         }
 
-    }
-}
-
-.courses__parent {
-    & .card__container {
-        width: 1170px;
-        padding: 75px;
-        margin: 0 auto 50px;
-        background: white;
-        border-radius: 15px;
-
-        & .card__header {
-            @include flexible();
-            margin-bottom: 50px;
-            justify-content: center;
-
-            & img {
-                margin-right: 35px;
-                display: block;
-                width: 80px;
-            }
-
-            & .card__name {
-                padding-left: 35px;
-                border-left: 2px solid $paragraph-black;
-                & .card__title {
-                    max-width: 763px;
-                    word-wrap: break-word;
-                    @include h2-bold();
-                    margin-bottom: 10px;
-                }
-
-                & .card__cipher {
-                    @include h3-regular();
-                    color: rgba(44, 44, 44, 0.5);
-                }
-            }
-
-        }
-
-        & .card__content {
-            display: grid;
-            grid-template-columns: 8fr 15fr;
-            grid-gap: 70px;
-
-            & .card__info {
-                & .card__item {
-                    margin-bottom: 50px;
-
-                    &:last-child {
-                        margin-bottom: 0;
-                    }
-
-                    & .item__title {
-                        @include h3-bold();
-                        margin-bottom: 25px;
-                    }
-                    & .item__text {
-                        @include paragraph-regular();
-                        margin-bottom: 17px;
-                    }
-                    & .card__exam {
-                        @include flexible();
-                        margin-bottom: 17px;
-
-                        img {
-                            display: block;
-                            width: 24px;
-                            margin-right: 20px;
-                        }
-                        & .item__text {
-                            margin-bottom: 0;
-                        }
-
-                        &:last-child {
-                            margin-bottom: 0;
-                        }
-                    }
-                }
-            }
-            & .card__profiles {
-                width: 100%;
-
-                & .profile__title {
-                    @include h3-bold();
-                    margin-bottom: 25px;
-                }
-
-                & .profile__container {
-                    display: block;
-                    padding: 15px 20px;
-                    margin-bottom: 10px;
-                    width: 100%;
-                    background-color: $primary-color;
-                    @include flexible();
-                    justify-content: space-between;
-                    border-radius: 10px;
-                    transition: all 0.4s ease;
-
-                    & .profile__text {
-                        @include paragraph-regular();
-                        color: white;
-                    }
-                    & .profile__ico {
-                        display: block;
-                        margin-left: 5px;
-                    }
-
-                    &:last-child {
-                        margin-bottom: 0;
-                    }
-                    &:hover {
-                        background-color: $primary-color-hover;
-                    }
-                    &:active {
-                        background-color: $primary-color-active;
-                    }
-                }
-            }
-        }
     }
 }
