added compare button + added swipe on current profile

--- a/src/layout/profilePageTemplate/profilePageTemplate.pug
+++ b/src/layout/profilePageTemplate/profilePageTemplate.pug
@@ -81,5 +81,7 @@ html(lang="ru")
                                                         | Важно:
                                                         |
                                                     =item.important
+                                                button(onclick="console.log('click')").card__button
+                                                    | Добавить к сравнению
         footer
             include ../footer/footer.pug
